# App-robot

./: .gitignore  .mise.toml  Dockerfile  LICENSE  SECURITY.md  precious.toml  pyproject.toml
.github/workflows/: build-android.yml  build-apk.yml  build-desktop.yml  pylint.yml
.mise/: tasks.toml
src/app/: __init__.py  main.py  robotcontrol.kv
