[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Lameur", email = "96985489+Lameur@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
app = "app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
