[project]
name = "app"
version = "0.1.0"
description = "Python app to control a Bluetooth robot"
readme = "README.md"
authors = [{ name = "Lameur", email = "96985489+Lameur@users.noreply.github.com" }]
requires-python = ">=3.13"
dependencies = ["kivy>=2.3.1", "pyserial>=3.5"]

[project.scripts]
app = "app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["flake8>=7.2.0", "mypy>=1.15.0", "ruff>=0.11.6"]
